<resources>
    <string name="app_name">Final Project</string>
    <string name="point_label">Points:</string>
    <string name="settings">Settings</string>
    <string name="charName">Simba</string>
    <string name="taskNamePrompt">Name of task</string>
    <string name="datePrompt">Due Date (YYYY-MM-DD)</string>
    <string name="createTask">Create</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="charNameInput">Character Name</string>
    <string name="start">Start</string>
    <string name="done">Done</string>
    <string name="stop">Stop</string>
    <string name="loginInput">Enter Username</string>
    <string name="login_button">Login</string>
</resources>
